--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"esModuleInterop": true,
 		"downlevelIteration": true,
 		"rootDir": "./src",
-		"outDir": "./dist",
+		"noEmit": true,
+		//"outDir": "./dist",
 		"declaration": true,
 		"plugins": [
 			{
